Correcting animation on mobile

--- a/styles/components/_navigation.scss
+++ b/styles/components/_navigation.scss
@@ -16,7 +16,7 @@
     // background-color: $color-black;
     height: 100vh;
     mix-blend-mode: normal;
-    padding: 8rem 2rem 4rem;
+    padding: 4rem 2rem 4rem;
     width: 100vw;
 
     display: none;
