--- a/styles/typography/_headings.scss
+++ b/styles/typography/_headings.scss
@@ -12,7 +12,7 @@
   }
 
   @include media("<phone") {
-    font-size: 12rem;
+    font-size: 10rem;
   }
 }
 
